OllyTiper.2.0/OllyTiper/Plugin.h


typedef unsigned char  uchar;          
typedef unsigned long  ulong;          
#define SHORTLEN       8               
extc void    cdecl Message(ulong addr,char *format,...);
typedef struct t_asmmodel {            
  uchar          code[MAXCMDSIZE];     
  uchar          mask[MAXCMDSIZE];     
  int            length;               
  int            jmpsize;              
  int            jmpoffset;            
  int            jmppos;               
} t_asmmodel;
typedef struct t_extmodel {            
  char           code[MAXCMDSIZE];     
  char           mask[MAXCMDSIZE];     
  int            length;               
  int            jmpsize;              
  int            jmpoffset;            
  int            jmppos;               
  int            isany;                
  int            cmdoffset;            
  char           ramask[MAXCMDSIZE];   
  char           rbmask[MAXCMDSIZE];   
} t_extmodel;
typedef struct t_bar {
  int            nbar;                 
  int            font;                 
  int            dx[NBAR];             
  int            defdx[NBAR];          
  char           *name[NBAR];          
  uchar          mode[NBAR];           
  int            captured;             
  int            active;               
  int            prevx;                
} t_bar;
typedef int  DRAWFUNC(char *,char *,int *,t_sortheader *,int);
typedef struct t_sorted {              
  char           name[MAX_PATH];       
  int            n;                    
  int            nmax;                 
  int            selected;             
  ulong          seladdr;              
  int            itemsize;             
  ulong          version;              
  void           *data;                
  SORTFUNC       *sortfunc;            
  DESTFUNC       *destfunc;            
  int            sort;                 
  int            sorted;               
  int            *index;               
  int            suppresserr;          
} t_sorted;
typedef struct t_table {               
  HWND           hw;                   
  t_sorted       data;                 
  t_bar          bar;                  
  int            showbar;              
  short          hscroll;              
  short          colsel;               
  int            mode;                 
  int            font;                 
  short          scheme;               
  short          hilite;               
  int            offset;               
  int            xshift;               
  DRAWFUNC       *drawfunc;            
} t_table;
#define INT3           0xCC            
typedef struct t_disasm {              
  ulong          ip;                   
  char           dump[TEXTLEN];        
  char           result[TEXTLEN];      
  char           comment[TEXTLEN];     
  char           opinfo[3][TEXTLEN];   
  int            cmdtype;              
  int            memtype;              
  int            nprefix;              
  int            indexed;              
  ulong          jmpconst;             
  ulong          jmptable;             
  ulong          adrconst;             
  ulong          immconst;             
  int            zeroconst;            
  int            fixupoffset;          
  int            fixupsize;            
  ulong          jmpaddr;              
  int            condition;            
  int            error;                
  int            warnings;             
  int            optype[3];            
  int            opsize[3];            
  int            opgood[3];            
  ulong          opaddr[3];            
  ulong          opdata[3];            
  t_operand      op[3];                
  ulong          regdata[8];           
  int            regstatus[8];         
  ulong          addrdata;             
  int            addrstatus;           
  ulong          regstack[NREGSTACK];  
  int            rststatus[NREGSTACK]; 
  int            nregstack;            
  ulong          reserved[29];         
} t_disasm;
extc int     cdecl Assemble(char *cmd,ulong ip,t_asmmodel *model,int attempt,
               int constsize,char *errtext);
typedef struct t_module {              
  ulong          base;                 
  ulong          size;                 
  ulong          type;                 
  ulong          codebase;             
  ulong          codesize;             
  ulong          resbase;              
  ulong          ressize;              
  t_stringtable  *stringtable;         
  int            nstringtable;         
  int            maxstringtable;       
  ulong          entry;                
  ulong          database;             
  ulong          idatatable;           
  ulong          idatabase;            
  ulong          edatatable;           
  ulong          edatasize;            
  ulong          reloctable;           
  ulong          relocsize;            
  char           name[SHORTLEN];       
  char           path[MAX_PATH];       
  int            nsect;                
  IMAGE_SECTION_HEADER *sect;          
  ulong          headersize;           
  ulong          fixupbase;            
  int            nfixup;               
  t_fixup        *fixup;               
  char           *codedec;             
  ulong          codecrc;              
  char           *hittrace;            
  char           *hittracecopy;        
  char           *datadec;             
  t_table        namelist;             
  t_symvar       *symvar;              
  int            nsymvar;              
  int            maxsymvar;            
  char           *globaltypes;         
  ulong          mainentry;            
  ulong          realsfxentry;         
  int            updatenamelist;       
  ulong          origcodesize;         
  ulong          sfxbase;              
  ulong          sfxsize;              
  int            issystemdll;          
  int            processed;            
  int            dbghelpsym;           
  char           version[NVERS];       
  t_jdest        *jddata;              
  int            njddata;              
  ulong          reserved[15];         
} t_module;
#define DU_ESCAPABLE   0x20000L        
#define DU_BACKUP      0x10000L        
#define DU_TYPE        0x0F000L        
#define DU_COUNT       0x00FF0L        
#define DU_SIZE        0x0000FL        
#define DU_UNDEF       0x00000L        
#define DU_HEXTEXT     0x01000L        
#define DU_TEXT        0x02000L        
#define DU_UNICODE     0x03000L        
#define DU_INT         0x04000L        
#define DU_UINT        0x05000L        
#define DU_IHEX        0x06000L        
#define DU_FLOAT       0x07000L        
#define DU_ADDR        0x08000L        
#define DU_DISASM      0x09000L        
#define DU_HEXUNI      0x0A000L        
#define DU_ADRASC      0x0B000L        
#define DU_ADRUNI      0x0C000L        
#define DU_SPEC        0x0D000L        
#define MT_BACKUP      0x0001          
#define MT_COPY        0x0002          
#define MT_EDIT        0x0004          
#define MT_SEARCH      0x0008          
#define MT_DHISTORY    0x0010          
typedef ulong SPECFUNC(char *,ulong,ulong,ulong,t_disasm *,int);
typedef struct t_dump {                
  t_table        table;                
  int            dimmed;               
  ulong          threadid;             
  int            dumptype;             
  SPECFUNC       *specdump;            
  int            menutype;             
  int            itemwidth;            
  int            showstackframes;      
  int            showstacklocals;      
  int            commentmode;          
  char           filename[MAX_PATH];   
  ulong          base;                 
  ulong          size;                 
  ulong          addr;                 
  ulong          lastaddr;             
  ulong          sel0;                 
  ulong          sel1;                 
  ulong          startsel;             
  int            captured;             
  ulong          reladdr;              
  char           relname[SHORTLEN];    
  uchar          *filecopy;            
  uchar          *backup;              
  int            runtraceoffset;       
  ulong          reserved[8];          
} t_dump;
#define WM_USER_MENU   (WM_USER+101)   
#define WM_USER_SCR    (WM_USER+102)   
#define WM_USER_SAVE   (WM_USER+103)   
#define WM_USER_VABS   (WM_USER+104)   
#define WM_USER_VREL   (WM_USER+105)   
#define WM_USER_VBYTE  (WM_USER+106)   
#define WM_USER_STS    (WM_USER+107)   
#define WM_USER_CNTS   (WM_USER+108)   
#define WM_USER_CHGS   (WM_USER+109)   
#define WM_USER_BAR    (WM_USER+110)   
#define WM_USER_DBLCLK (WM_USER+111)   
#define WM_USER_SIZE   (WM_USER+112)   
#define WM_USER_FOCUS  (WM_USER+113)   
#define WM_USER_FILE   (WM_USER+114)   
#define WM_USER_HERE   (WM_USER+115)   
#define WM_USER_CHALL  (WM_USER+116)   
#define WM_USER_CHMEM  (WM_USER+117)   
#define WM_USER_CHREG  (WM_USER+118)   
#define WM_USER_CHNAM  (WM_USER+119)   
#define WM_USER_MOUSE  (WM_USER+120)   
#define WM_USER_KEY    (WM_USER+121)   
#define WM_USER_SYSKEY (WM_USER+122)   
#define MAXTRACK       16384           
#define MOVETOP        0x7FFFFFFFL     
#define MOVEBOTTOM     0x7FFFFFFEL     
#define CONT_BROADCAST 0x0000          
#define STOP_BROADCAST 0x1234          
#define BKUP_CREATE    1               
#define BKUP_VIEWDATA  2               
#define BKUP_VIEWCOPY  3               
#define BKUP_LOADCOPY  4               
#define BKUP_SAVEDATA  5               
#define BKUP_SAVECOPY  6               
#define BKUP_DELETE    7               
extc int     cdecl Registerotclass(char *classname,
               char *iconname,WNDPROC classproc);
extc HWND    cdecl Newtablewindow(t_table *pt,int nlines,int maxcolumns,
               char *winclass,char *wintitle);
extc HWND    cdecl Quicktablewindow(t_table *pt,int nlines,int maxcolumns,
               char *winclass,char *wintitle);
extc HWND    cdecl Createdumpwindow(char *name,ulong base,ulong size,
               ulong addr,int type,SPECFUNC *specdump);
extc void    cdecl Setdumptype(t_dump *pd,int dumptype);
extc void    cdecl Dumpbackup(t_dump *pd,int action);
extc int     cdecl Broadcast(UINT msg,WPARAM wp,LPARAM lp);
extc ulong   cdecl Compress(uchar *bufin,ulong nbufin,
               uchar *bufout,ulong nbufout);
extc ulong   cdecl Getoriginaldatasize(char *bufin,ulong nbufin);
extc ulong   cdecl Decompress(uchar *bufin,ulong nbufin,
               uchar *bufout,ulong nbufout);
extc ulong   cdecl Calculatecrc(uchar *copy,ulong base,ulong size,
               t_module *pmod,ulong fixupoffset);
typedef struct t_ref {                 
  ulong          addr;                 
  ulong          size;                 
  ulong          type;                 
  ulong          dest;                 
} t_ref;
extc int     cdecl Findreferences(ulong base,ulong size,ulong addr0,ulong addr1,
               ulong origin,int recurseonjump,char *title);
extc int     cdecl Findstrings(ulong base,ulong size,ulong origin,char *title);
extc int     cdecl Findalldllcalls(t_dump *pd,ulong origin,char *title);
extc int     cdecl Findallcommands(t_dump *pd,t_asmmodel *model,
               ulong origin,char *title);
extc int     cdecl Findallsequences(t_dump *pd,t_extmodel model[NSEQ][NMODELS],
               ulong origin,char *title);
extc ulong   cdecl Walkreference(int dir);
extc ulong   cdecl Walkreferenceex(int dir,ulong *size);
#define MEMBP_READ     0x0001          
#define MEMBP_WRITE    0x0002          
#define MEMBP_SFX      0x1000          
#define TR_HIT         0x01            
#define TR_SET         0x02            
#define TR_RTSKIP      0x20            
#define TR_RTRACE      0x40            
#define TR_TRACE       0x80            
#define HB_FREE        0               
#define HB_CODE        1               
#define HB_ACCESS      2               
#define HB_WRITE       3               
#define HB_IO          4               
#define HB_ONESHOT     5               
#define HB_STOPAN      6               
#define HB_TEMP        7               
#define ATR_ADD        1               
#define ATR_ADDPROC    2               
#define ATR_RESET      3               
#define ATR_REMOVE     4               
#define ATR_REMOVEALL  5               
#define ATR_RESTORE    6               
#define ATR_RTRADD     7               
#define ATR_RTRJUMPS   8               
#define ATR_RTRENTRY   9               
#define ATR_RTREMOVE   10              
#define ATR_RTSKIP     11              
extc int     cdecl Modifyhittrace(ulong addr0,ulong addr1,int mode);