Loadsome2/src/Plugin.pas


////////////////////////////////////////////////////////////////////////////////
////////////////////////////////////// DUMP ////////////////////////////////////

const
  // Standard dump types.
  DU_ESCAPABLE      = $20000;           // Create escapable dump window
  DU_BACKUP         = $10000;           // Bit indicates that backup is displayed
  DU_TYPE           = $0F000;           // Mask for dump type
  DU_COUNT          = $00FF0;           // Mask for number of items/line
  DU_SIZE           = $0000F;           // Mask for size of single item

  DU_UNDEF          = $00000;           // Undefined dump type
  DU_HEXTEXT        = $01000;           // Hexadecimal dump with ASCII text
  DU_TEXT           = $02000;           // Character dump
  DU_UNICODE        = $03000;           // Unicode dump
  DU_INT            = $04000;           // Integer signed dump
  DU_UINT           = $05000;           // Integer unsigned dump
  DU_IHEX           = $06000;           // Integer hexadecimal dump
  DU_FLOAT          = $07000;           // Floating-point dump
  DU_ADDR           = $08000;           // Address dump
  DU_DISASM         = $09000;           // Disassembly
  DU_HEXUNI         = $0A000;           // Hexadecimal dump with UNICODE text
  DU_ADRASC         = $0B000;           // Address dump with ASCII text
  DU_ADRUNI         = $0C000;           // Address dump with UNICODE text
  DU_SPEC           = $0D000;           // Special decoding

  // Standard menu types.
  MT_BACKUP         = $0001;            // Backup, Undo
  MT_COPY           = $0002;            // Copy to clipboard
  MT_EDIT           = $0004;            // Edit, Modify, Assemble
  MT_SEARCH         = $0008;            // Search, Next
  MT_DHISTORY       = $0010;            // Previous, Next in history

type
  SPECFUNC = function(pc: PChar; a, b, c: ULONG; pdisam: p_disasm; i: Integer): ULONG; cdecl;

  p_dump = ^t_dump;
  t_dump = packed record                    // Current status of dump window
    table: t_table;                         // Treat dump window as custom table
    dimmed: Integer;                        // Draw in lowcolor if nonzero
    threadid: ULONG;                        // Use decoding and registers if not 0
    dumptype: Integer;                      // Current dump type, DU_xxx+count+size
    specdump: SPECFUNC;                     // Decoder of DU_SPEC dump types
    menutype: Integer;                      // Standard menues, MT_xxx
    itemwidth: Integer;                     // Length of displayed item, characters
    showstackframes: Integer;               // Show stack frames in address dump
    showstacklocals: Integer;               // Show names of locals in stack
    commentmode: Integer;                   // 0: comment, 1: source, 2: profile
    filename: array[0..MAX_PATH-1] of Char; // Name of displayed or backup file
    base: ULONG;                            // Start of memory block or file
    size: ULONG;                            // Size of memory block or file
    addr: ULONG;                            // Address of first displayed byte
    lastaddr: ULONG;                        // Address of last displayed byte + 1
    sel0: ULONG;                            // Address of first selected byte
    sel1: ULONG;                            // Last selected byte (not included!)
    startsel: ULONG;                        // Start of last selection
    captured: Integer;                      // Mouse is captured by dump
    reladdr: ULONG;                         // Addresses relative to this
    relname: array[0..SHORTLEN-1] of Char;  // Symbol for relative zero address base
    filecopy: PChar;                        // Copy of the file or NULL
    backup: PChar;                          // Old backup of memory/file or NULL
    runtraceoffset: Integer;                // Offset back in run trace
    reserved: array[0..7] of ULONG;         // Reserved for the future extentions
  end;

////////////////////////////////////////////////////////////////////////////////
//////////////////////////////// WINDOW FUNCTIONS //////////////////////////////

const
  WM_USER_MENU      = WM_USER + 101;        // Activate context-sensitive menu
  WM_USER_SCR       = WM_USER + 102;        // Redraw scroll(s)
  WM_USER_SAVE      = WM_USER + 103;        // Save data to disk
  WM_USER_VABS      = WM_USER + 104;        // Scroll contents of window by lines
  WM_USER_VREL      = WM_USER + 105;        // Scroll contents of window by percent
  WM_USER_VBYTE     = WM_USER + 106;        // Scroll contents of window by bytes
  WM_USER_STS       = WM_USER + 107;        // Start selection in window
  WM_USER_CNTS      = WM_USER + 108;        // Continue selection in window
  WM_USER_CHGS      = WM_USER + 109;        // Move single-line selection
  WM_USER_BAR       = WM_USER + 110;        // Message from bar segment as button
  WM_USER_DBLCLK    = WM_USER + 111;        // Doubleclick in column
  WM_USER_SIZE      = WM_USER + 112;        // Resize children in CPU window
  WM_USER_FOCUS     = WM_USER + 113;        // Set focus to child of CPU window
  WM_USER_FILE      = WM_USER + 114;        // Change state of file dump
  WM_USER_HERE      = WM_USER + 115;        // Query presence list
  WM_USER_CHALL     = WM_USER + 116;        // Redraw (almost) everything
  WM_USER_CHMEM     = WM_USER + 117;        // Range of debuggee's memory changed
  WM_USER_CHREG     = WM_USER + 118;        // Debuggee's register(s) changed
  WM_USER_CHNAM     = WM_USER + 119;        // Redraw name tables
  WM_USER_MOUSE     = WM_USER + 120;        // Check mouse coordinates
  WM_USER_KEY       = WM_USER + 121;        // Emulate WM_KEYDOWN
  WM_USER_SYSKEY    = WM_USER + 122;        // Emulate WM_SYSKEYDOWN

  // Constants used for scrolling and selection.
  MAXTRACK          = 16384;                // Maximal scroll of user-drawn table
  MOVETOP           = $7FFFFFFF;            // Move selection to top of table
  MOVEBOTTOM        = $7FFFFFFE;            // Move selection to bottom of table

  CONT_BROADCAST    = $0000;                // Continue sending msg to other windows
  STOP_BROADCAST    = $1234;                // Stop sending message to other windows

  // Dumpbackup() actions.
  BKUP_CREATE       = 1;                    // Create or update backup copy
  BKUP_VIEWDATA     = 2;                    // View original data
  BKUP_VIEWCOPY     = 3;                    // View backup copy
  BKUP_LOADCOPY     = 4;                    // Read backup copy from file
  BKUP_SAVEDATA     = 5;                    // Save original data to file
  BKUP_SAVECOPY     = 6;                    // Save backup copy to file
  BKUP_DELETE       = 7;                    // Delete backup copy

function Registerotclass(classname: PChar; iconname: PChar; classproc: Pointer): Integer; cdecl;

function Newtablewindow(pt: p_table; nlines: Integer; maxcolumns: Integer;
                        winclass: PChar; wintitle: PChar): HWND; cdecl;

function Quicktablewindow(pt: p_table; nlines: Integer; maxcolumns: Integer;
                          winclass: PChar; wintitle: PChar): HWND; cdecl;

function Createdumpwindow(name: PChar; base: ULONG; size: ULONG; addr: ULONG;
                          itype: Integer; specdump: SPECFUNC): HWND; cdecl;

procedure Setdumptype(pd: p_dump; dumptype: Integer); cdecl;

procedure Dumpbackup(pd: p_dump; action: Integer); cdecl;

function Broadcast(msg: Word; wp: WPARAM; lp: LPARAM): Integer; cdecl;

////////////////////////////////////////////////////////////////////////////////
/////////////////////////// DATA CONVERSION FUNCTIONS //////////////////////////

function Compress(bufin: PChar; nbufin: ULONG; bufout: PChar; nbufout: ULONG): ULONG; cdecl;

function Getoriginaldatasize(bufin: PChar; nbufin: ULONG): ULONG; cdecl;

function Decompress(bufin: PChar; nbufin: ULONG; bufout: PChar; nbufout: ULONG): ULONG; cdecl;

function Calculatecrc(copy: PChar; base: ULONG; size: ULONG;
                      pmod: p_module; fixupoffset: ULONG): ULONG; cdecl;

////////////////////////////////////////////////////////////////////////////////
///////////////////////////// REFERENCES AND SEARCH ////////////////////////////

type
  p_ref = ^t_ref;
  t_ref = packed record                 // Description of reference
    addr: ULONG;                        // Address of reference
    size: ULONG;                        // 1: single command, otherwise size
    ltype: ULONG;                       // Type of reference, TY_xxx
    dest: ULONG;                        // Destination of call
  end;

function Findreferences(base: ULONG; size: ULONG; addr0: ULONG; addr1: ULONG;
  origin: ULONG; recurseonjump: Integer; title: PChar): Integer; cdecl;

function Findstrings(base: ULONG; size: ULONG; origin: ULONG; title: PChar): Integer; cdecl;

function Findalldllcalls(pd: p_dump; origin: ULONG; title: PChar): Integer; cdecl;

function Findallcommands(pd: p_dump; model: p_asmmodel; origin: ULONG; title: PChar): Integer; cdecl;

function Findallsequences(pd: p_dump; model: p_extmodels; origin: ULONG; title: PChar): Integer; cdecl;

function Walkreference(dir: Integer): ULONG; cdecl;

function Walkreferenceex(dir: Integer; size: PULONG): ULONG; cdecl;

////////////////////////////////////////////////////////////////////////////////
///////////////////////// BREAKPOINT AND TRACE FUNCTIONS ///////////////////////

const
  MEMBP_READ        = $0001;            // Memory breakpoint on read
  MEMBP_WRITE       = $0002;            // Memory breakpoint on write
  MEMBP_SFX         = $1000;            // Skip self-extraction

  // Bits of module hit trace buffer.
  TR_HIT            = $01;              // Command was executed during trace
  TR_SET            = $02;              // Code INT3 is in memory, copy valid
  TR_RTSKIP         = $20;              // Disable run trace on command
  TR_RTRACE         = $40;              // Force run trace on command
  TR_TRACE          = $80;              // Command is included in trace

  HB_FREE           = 0;                // Breakpoint is not used
  HB_CODE           = 1;                // Active on command execution
  HB_ACCESS         = 2;                // Active on read/write access
  HB_WRITE          = 3;                // Active on write access
  HB_IO             = 4;                // Active on port I/O
  HB_ONESHOT        = 5;                // One-shot on command execution
  HB_STOPAN         = 6;                // One-shot on command and stop
  HB_TEMP           = 7;                // Temporary on command execution

  // Parameter mode of function Modifyhittrace().
  ATR_ADD           = 1;                // Add trace to buffer
  ATR_ADDPROC       = 2;                // Add only recognized procedures
  ATR_RESET         = 3;                // Mark range as not traced
  ATR_REMOVE        = 4;                // Remove range and breakpoints
  ATR_REMOVEALL     = 5;                // Destroy range and breakpoints
  ATR_RESTORE       = 6;                // Restore breakpoints
  ATR_RTRADD        = 7;                // Add trace and force run trace
  ATR_RTRJUMPS      = 8;                // Add trace and run trace jumps only
  ATR_RTRENTRY      = 9;                // Add trace and run trace entries only
  ATR_RTREMOVE      = 10;               // Remove trace from range
  ATR_RTSKIP        = 11;               // Skip when run tracing
